cargo-features = ["profile-rustflags"]

[package]
name = "minijinja-lua"
version = "0.1.14"
edition = "2024"
readme = "README.md"
repository = "https://github.com/benniekiss/minijinja-lua"
license = "MIT"
description = "lua bindings for minijinja"

[lib]
name = "minijinja_lua"
crate-type = ["cdylib"]

[features]
default = ["lua54", "vendored"]
lua55 = ["mlua/lua55"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
vendored = ["mlua/vendored"]
module = ["mlua/module"]

[dependencies]
minijinja = { version = "2.19.0", features = [
    "unicode",
    "fuel",
    "custom_syntax",
    "preserve_order",
    "json",
    "urlencode",
    "loop_controls",
    "speedups",
    "stacker",
] }
minijinja-contrib = { version = "2.19.0", features = [
    "pycompat",
    "datetime",
    "rand",
    "html_entities",
    "wordcount",
    "unicode_wordwrap",
] }
mlua = { version = "0.11", features = ["serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
rustflags = ["-Zlocation-detail=none", "-Zfmt-debug=none"]
